--- a/TalentoAUQService/TalentoUAQService.csproj
+++ b/TalentoAUQService/TalentoUAQService.csproj
@@ -190,8 +190,10 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\DatosGeneralesController.cs" />
     <Compile Include="Controllers\EstadosController.cs" />
     <Compile Include="Controllers\SugerenciasController.cs" />
+    <Compile Include="Models\DatosGenerales.cs" />
     <Compile Include="Models\favoritosClass.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OfertasController.cs" />
