--- a/TalentoUAQWebService/TalentoUAQWebService.csproj
+++ b/TalentoUAQWebService/TalentoUAQWebService.csproj
@@ -190,15 +190,25 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\DatosGeneralesController.cs" />
     <Compile Include="Controllers\EstadosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OfertasController.cs" />
+    <Compile Include="Controllers\SugerenciasController.cs" />
+    <Compile Include="Controllers\tblcategoriasController.cs" />
+    <Compile Include="Controllers\tblestadosController.cs" />
+    <Compile Include="Controllers\tblfavoritosController.cs" />
+    <Compile Include="Controllers\tblmunicipiosController.cs" />
+    <Compile Include="Controllers\tblsubcategoriasController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DatosGenerales.cs" />
     <Compile Include="Models\EstadosRepository.cs" />
+    <Compile Include="Models\favoritosClass.cs" />
     <Compile Include="Models\OfertasRepository.cs" />
+    <Compile Include="Models\TalentoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
       <DependentUpon>TalentoUAQWebServiceData.tt</DependentUpon>
