--- a/TalentoUAQWebService/TalentoUAQWebService.csproj
+++ b/TalentoUAQWebService/TalentoUAQWebService.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IdiomasController.cs" />
     <Compile Include="Controllers\OfertasController.cs" />
+    <Compile Include="Controllers\SubCategoriasUsuarioController.cs" />
     <Compile Include="Controllers\SugerenciasController.cs" />
     <Compile Include="Controllers\tblcategoriasController.cs" />
     <Compile Include="Controllers\tblEscolaridadesController.cs" />
@@ -221,6 +222,7 @@
     <Compile Include="Models\FavoritosRepository.cs" />
     <Compile Include="Models\IdiomasRepository.cs" />
     <Compile Include="Models\OfertasRepository.cs" />
+    <Compile Include="Models\SubCategoriasUsuarioRepository.cs" />
     <Compile Include="Models\TalentoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
